# triageflow

./: .gitignore  .prettierignore  LICENSE  README.md  eslint.config.mjs  nx.json  package-lock.json  package.json  tsconfig.base.json
.cursor/: mcp.json
apps/backend/: .env.example  README.md  project.json  pyproject.toml
apps/backend/backend/: hello.py
apps/backend/src/: __init__.py  main.py  state.py
apps/backend/src/agents/: __init__.py  intake.py  triage.py
apps/backend/src/api/: __init__.py  agents.py
apps/backend/src/core/: __init__.py  config.py
apps/backend/src/graphs/: __init__.py  main_graph.py  state.py
apps/backend/src/graphs/workflows/: __init__.py  patient_workflow.py
apps/backend/tests/: test_hello.py
apps/triageflow/: .postcssrc.json  project.json  tsconfig.json  vite.config.mts
apps/triageflow-e2e/: playwright.config.ts  project.json
apps/triageflow/src/: index.html  styles.css
libs/patient/data-access/: jest.config.ts  project.json
libs/patient/feat-tracker/: README.md  eslint.config.mjs  jest.config.ts  project.json
libs/patient/feat-triage-tracker/: README.md  jest.config.ts  project.json
libs/patient/shell/: jest.config.ts  project.json
libs/queue/feat-detail/: README.md  jest.config.ts  project.json
libs/queue/shell/: jest.config.ts  project.json
libs/shared/: jest.config.ts  project.json
libs/shared/models/: project.json
libs/shared/ui/: eslint.config.mjs  project.json
tools/devkit/: README.md  eslint.config.mjs  generators.json  package.json  project.json  vite.config.ts
tools/eslint-plugin-triageflow/: index.mjs
(+102 files in other folders)
